Normal button instead of large

--- a/app/templates/consent.twig
+++ b/app/templates/consent.twig
@@ -26,14 +26,14 @@
     <div class="col-md-3">
         <div class>
         <form action="" method="post">
-            <button type="button" class="btn btn-primary btn-success btn-lg">Yes, I Authorize This Request</button>
+            <button type="button" class="btn btn-primary btn-success">Yes, I Authorize This Request</button>
             <input type="hidden" name="authorize" value="1" />
         </form>
     </div>
     <div class="col-md-3">
           <div class>
           <form action="" method="post">
-              <button type="button" class="btn btn-primary btn-danger btn-lg">Yes, I Authorize This Request</button>
+              <button type="button" class="btn btn-primary btn-danger">Yes, I Authorize This Request</button>
               <input type="hidden" name="authorize" value="0" />
           </form>
       </div>
