true false instead of 0 1

--- a/app/templates/consent.twig
+++ b/app/templates/consent.twig
@@ -27,14 +27,14 @@
         <div class>
         <form action="" method="post">
             <button type="submit" class="btn btn-primary btn-success">Yes, I Authorize This Request</button>
-            <input type="hidden" name="authorize" value="1" />
+            <input type="hidden" name="authorize" value="true" />
         </form>
     </div>
     <div class="col-md-3">
           <div class>
           <form action="" method="post">
               <button type="submit" class="btn btn-primary btn-danger">Yes, I Authorize This Request</button>
-              <input type="hidden" name="authorize" value="0" />
+              <input type="hidden" name="authorize" value="false" />
           </form>
       </div>
   </div>
