--- a/app/templates/consent.twig
+++ b/app/templates/consent.twig
@@ -11,13 +11,13 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-7">
         <h2>Welcome to the OAuth2.0 Server!</h2>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-7">
-        <p>You have been sent here by <strong>{{client_public_id}}</strong>. {{client_public_id}} would like to grant <p>
+    <div class="row center-text">
+      <div class="col-md-10">
+        <p>You have been sent here by <strong>{{client_public_id}}</strong>.<p>
         <p>Client Name: {{client_name}}</p>
         <p>Client Description: {{client_description}}</p>
       </div>
