--- a/app/templates/consent.twig
+++ b/app/templates/consent.twig
@@ -17,7 +17,7 @@
     </div>
     <div class="row center-text">
       <div class="col-md-10">
-        <p>You have been sent here by <strong>{{client_public_id}}</strong>.<p>
+        <p>You have been sent here by client with client_id <strong>{{client_public_id}}</strong>.<p>
         <p>Client Name: {{client_name}}</p>
         <p>Client Description: {{client_description}}</p>
       </div>
